--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,13 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.3",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
+    "path": "^0.12.7",
+    "path-to-regexp": "^6.2.1",
     "zod": "^3.25.7",
     "zop": "^0.0.0"
   },
